Update Navigation Pane UI

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
                 <card></card>
             </row>
         </header>
-        <nav class="background-color-ccc" data-width="320px">
+        <nav class="-mobile-width-100pct background-color-ccc" data-width="320px">
             <section>
                 <card>
                     <section>
