Update Navigation Pane UI

--- a/app/index.html
+++ b/app/index.html
@@ -39,23 +39,71 @@
                 <card></card>
             </row>
         </header>
-        <nav class="-mobile-width-100pct background-color-ccc" data-width="320px">
+        <nav class="-mobile-width-100pct background-color-ccc padding-top-50px" data-width="320px">
             <section>
                 <card>
                     <section>
-                        <box>
+                        <header class="line-height-50px">
                             <row>
-                                <text>Quick Access</text>
+                                <ico>
+                                    <n class="gg-cloud"></n>
+                                </ico>
+                                <text>Offline</text>
                             </row>
-                        </box>
+                        </header>
                     </section>
                 </card>
                 <card>
-                    <section></section>
+                    <section>
+                        <header class="line-height-50px">
+                            <row>
+                                <ico>
+                                    <n class="gg-cloud"></n>
+                                </ico>
+                                <text>Cloud</text>
+                            </row>
+                        </header>
+                    </section>
+                </card>
+                <card>
+                    <section>
+                        <header class="line-height-50px">
+                            <row>
+                                <ico>
+                                    <n class="gg-cloud"></n>
+                                </ico>
+                                <text>Github</text>
+                            </row>
+                        </header>
+                    </section>
+                </card>
+                <card>
+                    <section>
+                        <header class="line-height-50px">
+                            <row>
+                                <ico>
+                                    <n class="gg-cloud"></n>
+                                </ico>
+                                <text>Google</text>
+                            </row>
+                        </header>
+                    </section>
+                </card>
+                <card>
+                    <section>
+                        <header class="line-height-50px">
+                            <row>
+                                <ico>
+                                    <n class="gg-cloud"></n>
+                                </ico>
+                                <text>Microsoft</text>
+                            </row>
+                        </header>
+                    </section>
                 </card>
             </section>
         </nav>
-        <main class="background-color-666 flex-1 scroll-y">
+        <main class="background-color-666 flex-1 padding-top-50px scroll-y">
             <page data-pages="/">
                 <blocks>
                     <block>
