Update Navigation Pane UI

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
                                 <ico>
                                     <n class="gg-cloud"></n>
                                 </ico>
-                                <text>Offline</text>
+                                <text>Cache</text>
                             </row>
                         </header>
                     </section>
