Update Navigation Pane UI

--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,38 @@
                                 <text>Cloud</text>
                             </row>
                         </header>
+                        <box class="line-height-50px padding-left-50px">
+                            <row>
+                                <ico>
+                                    <n class="gg-music"></n>
+                                </ico>
+                                <text>Audio</text>
+                            </row>
+                        </box>
+                        <box class="line-height-50px padding-left-50px">
+                            <row>
+                                <ico>
+                                    <n class="gg-file-document"></n>
+                                </ico>
+                                <text>Pages</text>
+                            </row>
+                        </box>
+                        <box class="line-height-50px padding-left-50px">
+                            <row>
+                                <ico>
+                                    <n class="gg-image"></n>
+                                </ico>
+                                <text>Photo</text>
+                            </row>
+                        </box>
+                        <box class="line-height-50px padding-left-50px">
+                            <row>
+                                <ico>
+                                    <n class="gg-film"></n>
+                                </ico>
+                                <text>Video</text>
+                            </row>
+                        </box>
                     </section>
                 </card>
                 <card>
