--- a/app/index.html
+++ b/app/index.html
@@ -136,19 +136,19 @@
             </section>
         </nav>
         <main class="background-color-666 flex-1 padding-top-50px scroll-y">
-            <page data-pages="/">
-                <blocks>
-                    <block>
+            <page data-pages="/" data-width="100%">
+                <blocks data-page="/">
+                    <block data-width="100%">
                         <section>
                             <card>
-                                <section>
+                                <section data-columns="5">
                                     <box>
-                                        <section>
+                                        <column>
                                             <ico>
-                                                <n></n>
+                                                <n class="gg-drive"></n>
                                             </ico>
-                                            <text>Apps</text>
-                                        </section>
+                                            <text>Cache</text>
+                                        </column>
                                     </box>
                                     <box>
                                         <section>
