--- a/app/index.html
+++ b/app/index.html
@@ -46,9 +46,9 @@
                         <header class="line-height-50px">
                             <row>
                                 <ico>
-                                    <n class="gg-cloud"></n>
+                                    <n class="gg-clock"></n>
                                 </ico>
-                                <text>Cache</text>
+                                <text>Recent</text>
                             </row>
                         </header>
                     </section>
@@ -95,42 +95,6 @@
                                 <text>Video</text>
                             </row>
                         </box>
-                    </section>
-                </card>
-                <card>
-                    <section>
-                        <header class="line-height-50px">
-                            <row>
-                                <ico>
-                                    <n class="gg-cloud"></n>
-                                </ico>
-                                <text>Github</text>
-                            </row>
-                        </header>
-                    </section>
-                </card>
-                <card>
-                    <section>
-                        <header class="line-height-50px">
-                            <row>
-                                <ico>
-                                    <n class="gg-cloud"></n>
-                                </ico>
-                                <text>Google</text>
-                            </row>
-                        </header>
-                    </section>
-                </card>
-                <card>
-                    <section>
-                        <header class="line-height-50px">
-                            <row>
-                                <ico>
-                                    <n class="gg-cloud"></n>
-                                </ico>
-                                <text>Microsoft</text>
-                            </row>
-                        </header>
                     </section>
                 </card>
             </section>
