--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,30 @@
                         </box>
                     </section>
                 </card>
+                <card>
+                    <section>
+                        <header class="line-height-50px">
+                            <row>
+                                <ico>
+                                    <n class="gg-cloud"></n>
+                                </ico>
+                                <text>Google</text>
+                            </row>
+                        </header>
+                    </section>
+                </card>
+                <card>
+                    <section>
+                        <header class="line-height-50px">
+                            <row>
+                                <ico>
+                                    <n class="gg-cloud"></n>
+                                </ico>
+                                <text>Microsoft</text>
+                            </row>
+                        </header>
+                    </section>
+                </card>
             </section>
         </nav>
         <main class="background-color-666 flex-1 padding-top-50px scroll-y">
