--- a/app/index.html
+++ b/app/index.html
@@ -102,7 +102,7 @@
                         <header class="line-height-50px">
                             <row>
                                 <ico>
-                                    <n class="gg-cloud"></n>
+                                    <n class="gg-google"></n>
                                 </ico>
                                 <text>Google</text>
                             </row>
@@ -114,7 +114,7 @@
                         <header class="line-height-50px">
                             <row>
                                 <ico>
-                                    <n class="gg-cloud"></n>
+                                    <n class="gg-windows"></n>
                                 </ico>
                                 <text>Microsoft</text>
                             </row>
