--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
                         <header class="line-height-50px">
                             <row>
                                 <ico>
-                                    <n class="gg-clock"></n>
+                                    <n class="gg-time"></n>
                                 </ico>
                                 <text>Recent</text>
                             </row>
