--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
                 </card>
                 <card>
                     <header>
-                        <box class="line-height-50px">
+                        <box class="line-height-50px" data-href="/cloud/">
                             <row>
                                 <ico>
                                     <n class="gg-cloud"></n>
@@ -182,7 +182,7 @@
             </section>
         </nav>
         <main class="flex-1 padding-top-50px scroll-y">
-            <page data-pages="/" data-width="100%">
+            <page class="padding-20px" data-pages="/" data-width="100%">
                 <blocks data-page="/">
                     <block data-width="100%">
                         <section>
@@ -190,27 +190,27 @@
                                 <section data-columns="5">
                                     <box>
                                         <column>
-                                            <ico>
-                                                <n class="gg-drive"></n>
+                                            <ico data-height="100px" data-width="100px">
+                                                <n class="-ggs-2 gg-drive"></n>
                                             </ico>
-                                            <text>Cache</text>
+                                            <text class="text-align-center" data-width="100px">Cache</text>
                                         </column>
                                     </box>
                                     <box>
-                                        <section>
-                                            <ico>
-                                                <n></n>
+                                        <column>
+                                            <ico data-height="100px" data-width="100px">
+                                                <n class="-ggs-2 gg-cloud"></n>
                                             </ico>
-                                            <text>People</text>
-                                        </section>
+                                            <text class="text-align-center" data-width="100px">Cloud</text>
+                                        </column>
                                     </box>
                                     <box>
-                                        <section>
-                                            <ico>
-                                                <n></n>
+                                        <column>
+                                            <ico data-height="100px" data-width="100px">
+                                                <n class="-ggs-2 gg-windows"></n>
                                             </ico>
-                                            <text>OS</text>
-                                        </section>
+                                            <text class="text-align-center" data-width="100px">OneDrive</text>
+                                        </column>
                                     </box>
                                 </section>
                             </card>
