Move source to root folder

--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <html>
     <head>
-        <title>Files | uiOS</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
-        <link href="/index.css" rel="stylesheet">
-        <link href="/cdn/css/gg.css" rel="stylesheet">
-        <script src="/cdn/js/vanilla.js"></script>
-        <script src="/cdn/js/mvc.js"></script>
-        <script src="/cdn/js/on.js"></script>
-        <script src="/cdn/js/router.js"></script>
-        <script src="/cdn/js/touch.js"></script>
-        <script src="/index.js"></script>
+        <title>Files &#8226;&#160;uiOS</title>
+        <meta name='viewport' content='width=device-width,initial-scale=1.0,maximum-scale=1.0'>
+        <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
+        <meta name='apple-mobile-web-app-capable' content='yes'>
+        <meta name='apple-mobile-web-app-status-bar-style' content='#021025'>
+        <meta name="apple-mobile-web-app-title" content="Files">
+        <meta name="application-name" content="Files">
+        <meta name="application-shortname" content="files">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name='theme-color' content='#021025'>
+        <script>
+            var domains = window.location.host.split('.');
+            window.globals = {
+                domains: {
+                    domain: domains.length > 1 ? domains[domains.length - 2] : null,
+                    subdomain: domains.length > 2 ? domains[domains.length - 3] : null,
+                    tld: domains[domains.length - 1]
+                }
+            }
+            const base = document.createElement("base");
+            base.href = (globals.domains.domain === "github" ? "/" + document.head.querySelector('[name="application-shortname"]').content : "") + "/";
+            document.head.appendChild(base);
+        </script>
+        <link href="index.css" rel="stylesheet">
+        <link href="cdn/css/gg.css" rel="stylesheet">
+        <script src="cdn/js/vanilla.js"></script>
+        <script src="cdn/js/mvc.js"></script>
+        <script src="cdn/js/on.js"></script>
+        <script src="cdn/js/router.js"></script>
+        <script src="cdn/js/touch.js"></script>
+        <script src="index.js"></script>
     </head>
     <body class="flex flex-direction-row flex-wrap-wrap" data-theme="meridiem">
         <boot id="boot"></boot>
